--- a/courses/backend/databases/example-api/package.json
+++ b/courses/backend/databases/example-api/package.json
@@ -5,11 +5,13 @@
 	"main": "index.js",
 	"type": "module",
 	"scripts": {
-		"dev": "node --watch index.js"
+		"prod": "NODE_ENV=production node --watch index.js",
+		"dev": "NODE_ENV=development node --watch index.js"
 	},
 	"dependencies": {
 		"express": "^5.1.0",
 		"knex": "^3.1.0",
+		"pg": "^8.16.3",
 		"sqlite3": "^5.1.7"
 	}
 }
