--- a/courses/foundation/intro-to-backend/package.json
+++ b/courses/foundation/intro-to-backend/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "body-parser": "^2.2.2",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "knex": "^3.1.0",
     "sqlite3": "^5.1.7"
